# mulle-templates

./: .gitignore  CMakeLists.txt  README.md  RELEASENOTES.md  mulle-get-publisher  mulle-objc-create-templates  mulle-objc-init  mulle-objc-print-templates  mulle-templates-create  mulle-templates-print
.bootstrap/: repositories
templates/: CMakeLists.txt.scion  README.md.scion
templates/dox/: Xcode_7_integration.md.scion
